# f25-assignments

./: README.md  SETUP0_ROSWorkspace.md  SETUP1_GitAssignmentRepo.md  dependencies.txt
assignment-1/: ExtraQuestions-CPSC559.md  PRELIMINARIES.md  README.md
assignment-1/calibration/: calibrate_K.py
assignment-1/depth/: process_images.py  save_images.py
assignment-1/shutter_lookat/: CMakeLists.txt  README.md  package.xml
assignment-1/shutter_lookat/launch/: generate_target.launch.py
assignment-1/shutter_lookat/scripts/: generate_target.py  look_forward.py  virtual_camera.py
assignment-1/shutter_lookat_public_tests/: CMakeLists.txt  README.md  package.xml
assignment-1/shutter_lookat_public_tests/test/: test_fancy_virtual_camera.py  test_publish_target.py  test_virtual_camera.py  utils.py
assignment-2/: ExtraQuestions-CPSC559.md  README.md  Train_Google_Cloud_Engine.md  Train_Google_Colab.md  install_python_deps.sh
assignment-2/function_approximation/: train_and_test_saddle_function.py
assignment-2/shutter_behavior_cloning/: CMakeLists.txt  package.xml
assignment-2/shutter_behavior_cloning/launch/: collect_data.launch.py
assignment-2/shutter_behavior_cloning/scripts/: train_utils.py
assignment-2/shutter_behavior_cloning/src/: expert_opt.py  generate_random_target.py  look_forward.py  run_policy.py
assignment-2/shutter_behavior_cloning/test/: test_policy.py
assignment-2/shutter_kf/: CMakeLists.txt  package.xml
assignment-2/shutter_kf/launch/: follow_target.launch.py  record_bag.launch.py
assignment-2/shutter_kf/scripts/: generate_continuous_target.py  kalman_filter.py
assignment-2/shutter_kf_public_tests/: CMakeLists.txt  package.xml
assignment-2/shutter_kf_public_tests/test/: test_filter_quality.py  test_kalman_filter.py
shutter-notes/: motion_control.md
