<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shutter_kf_public_tests</name>
  <version>0.0.0</version>
  <description>Public tests for shutter_kf package</description>

  <maintainer email="shutter@todo.todo">shutter</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>shutter_lookat</depend>
  <depend>shutter_bringup</depend>
  <depend>shutter_kf</depend>
  <!-- No launch_testing dependencies needed; tests run as plain unittest via CTest -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>
  <test_depend>rclpy</test_depend>
  <!-- No ament_cmake_gtest needed; we use Python unittest -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
